background picture are added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="f-s">
             <h1><span class="orange">Skip</span> <b>The Diet, Just Eat Healthy With Food Network</b> </h1>
             <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p><br><br>
-            <a class="button mar" target="_blank"
+            <a class="button" target="_blank"
                 href="https://www.tripadvisor.com/Restaurant_Review-g293936-d12231696-Reviews-Olea-Dhaka_City_Dhaka_Division.html">Order
                 Food</a>
         </div>
@@ -23,12 +23,21 @@
             <img src="male.png" alt="">
         </div>
     </section>
-    <section >
-        <div class="s-s">
-            
-            <h1>About Me</h1>
-            <p>hey, I'm Tariq Bin Bashar. Now I'm chef of my own restaurant. </p>
+    <section id="s-i">
+        <div class="container">
+            <img class="i" src="me.png" alt="">
+            <div class="s-s">
+                <h1>About Me</h1>
+                <p>hey, I'm Tariq Bin Bashar. Now I'm chef of my own restaurant. I learned cooking in the United States of America.
+                    my restaurant has various types of recipes. you can try these.</p><br><br>
+                <a class="s-s-button" target="_blank"
+                    href="https://www.linkedin.com/in/tariq-bin-bashar-1b2750229/">Contact
+                    me</a>
+            </div>
         </div>
+    </section>
+    <section>
+
     </section>
 </body>
 </html>
