third section is done

--- a/index.html
+++ b/index.html
@@ -36,8 +36,13 @@
             </div>
         </div>
     </section>
-    <section>
-
+    <section class="container-2">
+       <div class="t-s">
+        <h2>My Recipies</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+            standard
+            dummy text ever since the 1500s.</p>
+       </div>
     </section>
 </body>
 </html>
