4 th part on working

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Playfair+Display:wght@600&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>DIET</title>
 </head>
@@ -36,13 +38,35 @@
             </div>
         </div>
     </section>
-    <section class="container-2">
+    <div id="container-2">
        <div class="t-s">
         <h2>My Recipies</h2>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
             standard
             dummy text ever since the 1500s.</p>
        </div>
+    </div>
+    <section>
+        <div class="recipie">
+            <div>
+                <img class="i-4" src="p_1.jpg" alt="">
+                <h2>Recipie Title</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus
+                    at.</p>
+            </div>
+            <div>
+                <img class="i-4" src="p_2.jpg" alt="">
+                <h2>Recipie Title</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.
+                </p>
+            </div>
+            <div>
+                <img class="i-4" src="p_3.png" alt="">
+                <h2>Recipie Title</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.
+               </p>
+            </div>
+        </div>
     </section>
 </body>
 </html>
