box shadow are added

--- a/index.html
+++ b/index.html
@@ -39,28 +39,28 @@
         </div>
     </section>
     <div id="container-2">
-       <div class="t-s">
-        <h2>My Recipies</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-            standard
-            dummy text ever since the 1500s.</p>
+       <div>
+        <h2 class="t-s-1">My Recipies</h2>
+        <p class="t-s-2"><center>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+        standard
+        dummy text ever since the 1500s.</center></p>
        </div>
     </div>
     <section>
-        <div class="recipie">
-            <div>
+        <div class="recipie-container">
+            <div class="recipie">
                 <img class="i-4" src="p_1.jpg" alt="">
                 <h2>Recipie Title</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus
                     at.</p>
             </div>
-            <div>
+            <div class="recipie">
                 <img class="i-4" src="p_2.jpg" alt="">
                 <h2>Recipie Title</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.
                 </p>
             </div>
-            <div>
+            <div class="recipie">
                 <img class="i-4" src="p_3.png" alt="">
                 <h2>Recipie Title</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.
