--- a/index.html
+++ b/index.html
@@ -68,5 +68,22 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="recipie-container-1">
+            <div>
+                <h2>1k</h2>
+                <h4>Youtube subscription</h4>
+            </div>
+            <div>
+                <h2>800</h2>
+                <h4>Instragram Folowers</h4>
+            </div>
+            <div>
+                <h2>000</h2>
+                <h4>Dribble Shot Likes</h4>
+            </div>
+        </div>
+    </section>
+    <footer>@<span class="color">Tariq Bin Bashar</span></footer>
 </body>
 </html>
